[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/LightEffect_01.png" type="Texture" id=1]
[ext_resource path="res://Object/Projectile.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 17.72

[node name="Projectile" type="Area2D"]
collision_layer = 16
collision_mask = 10
script = ExtResource( 2 )
_travel_speed = Vector2( 1000, 0 )

[node name="LightEffect_01" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Projectile_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Projectile_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_screen_exited"]
